--- a/package.json
+++ b/package.json
@@ -9,10 +9,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~6.1.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@supabase/supabase-js": "^2.89.0",
     "expo": "~54.0.30",
+    "expo-constants": "^18.0.12",
+    "expo-device": "^8.0.10",
+    "expo-linking": "^8.0.11",
+    "expo-notifications": "^0.32.15",
+    "expo-router": "^6.0.21",
     "expo-status-bar": "~3.0.9",
+    "i18next": "^25.7.3",
+    "nativewind": "^4.2.1",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-dom": "19.1.0",
+    "react-i18next": "^16.5.0",
+    "react-native": "0.81.5",
+    "react-native-reanimated": "^4.2.1",
+    "react-native-safe-area-context": "^5.6.2",
+    "react-native-url-polyfill": "^3.0.0",
+    "react-native-web": "^0.21.0",
+    "tailwindcss": "^3.3.2",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
