--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "reminder-subscriptions-app",
+  "name": "zombie-subscriptions",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -15,9 +15,11 @@
     "expo": "~54.0.30",
     "expo-constants": "^18.0.12",
     "expo-device": "^8.0.10",
+    "expo-file-system": "^19.0.21",
     "expo-linking": "^8.0.11",
     "expo-notifications": "^0.32.15",
     "expo-router": "^6.0.21",
+    "expo-sharing": "^14.0.8",
     "expo-status-bar": "~3.0.9",
     "i18next": "^25.7.3",
     "nativewind": "^4.2.1",
@@ -25,15 +27,18 @@
     "react-dom": "19.1.0",
     "react-i18next": "^16.5.0",
     "react-native": "0.81.5",
-    "react-native-reanimated": "^4.2.1",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.6.2",
+    "react-native-screens": "~4.16.0",
     "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "^0.21.0",
+    "react-native-worklets": "^0.7.1",
     "tailwindcss": "^3.3.2",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "babel-preset-expo": "^54.0.9",
     "typescript": "~5.9.2"
   },
   "private": true
