--- a/package.json
+++ b/package.json
@@ -10,35 +10,39 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@supabase/supabase-js": "^2.89.0",
-    "expo": "~54.0.30",
-    "expo-constants": "^18.0.12",
-    "expo-device": "^8.0.10",
-    "expo-file-system": "^19.0.21",
-    "expo-linking": "^8.0.11",
-    "expo-notifications": "^0.32.15",
-    "expo-router": "^6.0.21",
-    "expo-sharing": "^14.0.8",
+    "expo": "^54.0.30",
+    "expo-constants": "~18.0.12",
+    "expo-device": "~8.0.10",
+    "expo-file-system": "~19.0.21",
+    "expo-keep-awake": "~15.0.8",
+    "expo-linking": "~8.0.11",
+    "expo-notifications": "~0.32.15",
+    "expo-router": "~6.0.21",
+    "expo-sharing": "~14.0.8",
     "expo-status-bar": "~3.0.9",
     "i18next": "^25.7.3",
+    "lucide-react-native": "^0.562.0",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-i18next": "^16.5.0",
     "react-native": "0.81.5",
     "react-native-reanimated": "~4.1.1",
-    "react-native-safe-area-context": "^5.6.2",
+    "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "^0.21.0",
-    "react-native-worklets": "^0.7.1",
+    "react-native-worklets": "0.5.1",
     "tailwindcss": "^3.3.2",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
-    "@types/react": "~19.1.0",
+    "@types/react": "~19.1.10",
     "babel-preset-expo": "^54.0.9",
+    "react-refresh": "^0.14.2",
     "typescript": "~5.9.2"
   },
   "private": true
